Improve HomeAssistant MQTT secrets

--- a/apps/home/homeassistant/prepare/secrets.yaml.j2
+++ b/apps/home/homeassistant/prepare/secrets.yaml.j2
@@ -6,5 +6,5 @@
 recorder_mysql_url: mysql://{{ homeassistant_mysql_user }}:{{ homeassistant_mysql_password }}@homeassistant-mysql/{{ homeassistant_mysql_database }}?charset=utf8
 
 # MQTT credentials
-mqtt_username: user
-mqtt_password: Passw0rd
+mqtt_username: {{ homeassistant_mqtt_user }}
+mqtt_password: {{ homeassistant_mqtt_password }}
