--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: homeassistant
     app-component: homeassistant
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
@@ -30,6 +32,11 @@ spec:
           mountPath: /etc/localtime
         - name: homeassistant-pv-claim
           mountPath: /config
+        - mountPath: /opt/ldap-auth
+          name: homeassistant-ldap-auth
+        - name: certs-volume
+          mountPath: /opt/openldap-ca.crt
+          subPath: ca.crt
         resources:
           requests:
             cpu: "{{ homeassistant_homeassistant_requests_cpu | default("500m") }}"
@@ -41,6 +48,13 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: homeassistant-ldap-auth
+        configMap:
+          name: homeassistant-ldap-auth
+          defaultMode: 0755
+      - name: certs-volume
+        secret:
+          secretName: openldap-ca   
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
