Add custom nodes in Node-RED image

--- a/apps/home/nodered/prepare/flows.json.j2
+++ b/apps/home/nodered/prepare/flows.json.j2
@@ -28,33 +28,13 @@
         "crontab": "",
         "once": false,
         "onceDelay": 0.1,
-        "x": 240,
-        "y": 420,
+        "x": 230,
+        "y": 320,
         "wires": [
             [
                 "675da9de.c7ff7"
             ]
         ]
-    },
-    {
-        "id": "99f76854.1cdb2",
-        "type": "comment",
-        "z": "5cf77e32.54a47",
-        "name": "If you see \"unknown\" nodes below, please install the 'node-red-contrib-home-assistant-websocket' node",
-        "info": "",
-        "x": 500,
-        "y": 40,
-        "wires": []
-    },
-    {
-        "id": "e99b940.2f45f7",
-        "type": "comment",
-        "z": "5cf77e32.54a47",
-        "name": "To install a node, go to the top-right menu > Manage Palette > Install tab",
-        "info": "",
-        "x": 400,
-        "y": 80,
-        "wires": []
     },
     {
         "id": "6007c54a.af0e04",
@@ -69,8 +49,8 @@
         "mergecontext": "",
         "output_location": "payload",
         "output_location_type": "msg",
-        "x": 670,
-        "y": 420,
+        "x": 690,
+        "y": 320,
         "wires": [
             []
         ]
@@ -91,7 +71,7 @@
         "state_type": "str",
         "outputs": 1,
         "x": 470,
-        "y": 420,
+        "y": 320,
         "wires": [
             [
                 "6007c54a.af0e04"
@@ -102,10 +82,10 @@
         "id": "27909229.fa886e",
         "type": "comment",
         "z": "5cf77e32.54a47",
-        "name": "Once installed, you still need to configure the HomeAssistant server",
+        "name": "You still need to configure the HomeAssistant server",
         "info": "",
-        "x": 380,
-        "y": 140,
+        "x": 330,
+        "y": 40,
         "wires": []
     },
     {
@@ -114,8 +94,8 @@
         "z": "5cf77e32.54a47",
         "name": "Go to the top-right menu > Configuration Nodes > Home Assistant",
         "info": "",
-        "x": 380,
-        "y": 180,
+        "x": 370,
+        "y": 80,
         "wires": []
     },
     {
@@ -125,7 +105,7 @@
         "name": "Fill in the settings : ",
         "info": "",
         "x": 230,
-        "y": 220,
+        "y": 120,
         "wires": []
     },
     {
@@ -135,7 +115,7 @@
         "name": "Base URL : http://homeassistant",
         "info": "",
         "x": 470,
-        "y": 220,
+        "y": 120,
         "wires": []
     },
     {
@@ -144,8 +124,8 @@
         "z": "5cf77e32.54a47",
         "name": "Access Token : [HomeAssistant long lived token]",
         "info": "",
-        "x": 800,
-        "y": 220,
+        "x": 520,
+        "y": 160,
         "wires": []
     },
     {
@@ -154,8 +134,8 @@
         "z": "5cf77e32.54a47",
         "name": "And remember to hit the Deploy button !",
         "info": "",
-        "x": 300,
-        "y": 280,
+        "x": 290,
+        "y": 200,
         "wires": []
     },
     {
@@ -165,7 +145,7 @@
         "name": "Each time you click on the grey button, you should see a notification on HomeAssistant",
         "info": "",
         "x": 440,
-        "y": 340,
+        "y": 240,
         "wires": []
     }
 ]
