--- a/apps/home/nodered/deploy/statefulSet.yaml.j2
+++ b/apps/home/nodered/deploy/statefulSet.yaml.j2
@@ -37,12 +37,18 @@ spec:
           mountPath: /etc/localtime
         - name: nodered-pv-claim
           mountPath: /data
+        - name: nodered-config
+          mountPath: /data/settings.js
+          subPath: settings.js
       securityContext:
         fsGroup: 1001 # node-red group inside the container
       volumes:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: nodered-config
+        configMap:
+          name: nodered
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
