--- a/apps/home/nodered/deploy/statefulSet.yaml.j2
+++ b/apps/home/nodered/deploy/statefulSet.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: nodered
     app-component: nodered
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
@@ -40,6 +42,9 @@ spec:
         - name: nodered-config
           mountPath: /data/settings.js
           subPath: settings.js
+        - name: certs-volume
+          mountPath: /opt/openldap-ca.crt
+          subPath: ca.crt
       securityContext:
         fsGroup: 1001 # node-red group inside the container
       volumes:
@@ -49,6 +54,9 @@ spec:
       - name: nodered-config
         configMap:
           name: nodered
+      - name: certs-volume
+        secret:
+          secretName: openldap-ca
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
