Improva Grafana storage preparation No need to mount the FS anymore, we start the container with the proper fsGroup

--- a/apps/monitoring/grafana/deploy/statefulSet.yaml.j2
+++ b/apps/monitoring/grafana/deploy/statefulSet.yaml.j2
@@ -58,8 +58,7 @@ spec:
       nodeSelector:
         capability/general-purpose: 'yes'
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 65534
+        fsGroup: 472 # grafana group inside the container
       serviceAccountName: grafana
       volumes:
       - name: tz-config
