Expose OpenLDAP for other namespaces

--- a/apps/auth/openldap/deploy/exposed/secret-ca.yaml.j2
+++ b/apps/auth/openldap/deploy/exposed/secret-ca.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: openldap-ca
-  namespace: default
+  namespace: {{ item.1 }}
   labels:
     app: openldap
     app-component: openldap
