--- a/apps/monitoring/grafana/config/etc/grafana.ini.j2
+++ b/apps/monitoring/grafana/config/etc/grafana.ini.j2
@@ -148,10 +148,10 @@ log_queries =
 #################################### Security ####################################
 [security]
 # default admin user, created on startup
-;admin_user = admin
+admin_user = {{ grafana_admin_user }}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-;admin_password = admin
+admin_password = {{ grafana_admin_password }}
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
