Enable LDAP Auth on Grafana

--- a/apps/monitoring/grafana/config/etc/grafana.ini.j2
+++ b/apps/monitoring/grafana/config/etc/grafana.ini.j2
@@ -302,11 +302,11 @@ admin_password = {{ grafana_admin_password }}
 
 #################################### Basic Auth ##########################
 [auth.basic]
-;enabled = true
+enabled = false
 
 #################################### Auth LDAP ##########################
 [auth.ldap]
-;enabled = false
+enabled = true
 ;config_file = /etc/grafana/ldap.toml
 ;allow_sign_up = true
 
