--- a/apps/monitoring/grafana/deploy/statefulSet.yaml.j2
+++ b/apps/monitoring/grafana/deploy/statefulSet.yaml.j2
@@ -61,6 +61,9 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/grafana-dashboards-config
           name: grafana-dashboards-config
           readOnly: false
+        - name: certs-volume
+          mountPath: /etc/ldap/ca.crt
+          subPath: ca.crt
       nodeSelector:
         capability/general-purpose: 'yes'
       securityContext:
@@ -82,6 +85,9 @@ spec:
       - name: grafana-dashboards-config
         configMap:
           name: grafana-dashboards-config
+      - name: certs-volume
+        secret:
+          secretName: openldap-ca
   volumeClaimTemplates:
   - metadata:
       name: grafana-pv-claim
