Fix OpenLDAP servername and certificates

--- a/apps/auth/lemonldap/config/lmConf.json.j2
+++ b/apps/auth/lemonldap/config/lmConf.json.j2
@@ -116,7 +116,7 @@
        "cn": "cn"
    },
 {# generalParameters > authParams > ldapParams > ldapConnection #}
-   "ldapServer": "ldap+tls://openldap/cafile=/var/lib/lemonldap-ng/server-certs/ca.crt",
+   "ldapServer": "ldap+tls://{{ lemonldap_ldap_servername }}/cafile=/var/lib/lemonldap-ng/server-certs/ca.crt",
    "ldapPort": 389,
    "ldapBase": "{{ lemonldap_ldap_base }}",
    "managerDn": "{{ lemonldap_ldap_manager_dn }}",
