--- a/apps/auth/phpldapadmin/config/default.startup.yaml.j2
+++ b/apps/auth/phpldapadmin/config/default.startup.yaml.j2
@@ -2,7 +2,7 @@ PHPLDAPADMIN_LDAP_HOSTS:
   - openldap:
     - server:
       # http://phpldapadmin.sourceforge.net/wiki/index.php/Server:server:host
-      - host: ldap://openldap
+      - host: ldap://{{ phpldapadmin_ldap_servername }}
       - tls: true
       - port: 389
     - login:
@@ -12,11 +12,11 @@ PHPLDAPADMIN_LDAP_HOSTS:
 PHPLDAPADMIN_LDAP_HOSTS_FRIENDLY:
   - OpenLDAP Auth:
     - server:
-      - host: openldap
+      - host: {{ phpldapadmin_ldap_servername }}"
 
 # LDAP client tls config
 PHPLDAPADMIN_LDAP_CLIENT_TLS: true
-PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: allow
+PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: demand
 PHPLDAPADMIN_LDAP_CLIENT_TLS_CA_CRT_FILENAME: ../server-certs/ca.crt
 PHPLDAPADMIN_LDAP_CLIENT_TLS_CRT_FILENAME: ldap-client.crt
 PHPLDAPADMIN_LDAP_CLIENT_TLS_KEY_FILENAME: ldap-client.key
