--- a/apps/dev/gitlab/config/gitlab.rb.j2
+++ b/apps/dev/gitlab/config/gitlab.rb.j2
@@ -239,7 +239,7 @@ gitlab_rails['ldap_enabled'] = true
 gitlab_rails['ldap_servers'] = YAML.load <<-'EOS'
   main: # 'main' is the GitLab 'provider ID' of this LDAP server
     label: 'OpenLDAP'
-    host: 'openldap'
+    host: '{{ gitlab_ldap_servername }}'
     port: 389
     uid: 'uid'
     bind_dn: '{{ gitlab_ldap_manager_dn }}'
