Fix Airsonic volume mount paths

--- a/apps/stream/airsonic/deploy/statefulSet.yaml.j2
+++ b/apps/stream/airsonic/deploy/statefulSet.yaml.j2
@@ -45,9 +45,9 @@ spec:
         - name: tz-config
           mountPath: /etc/localtime
         - name: airsonic-data-pv-claim
-          mountPath: /data
+          mountPath: /airsonic/data
         - name: airsonic-playlists-pv-claim
-          mountPath: /playlists
+          mountPath: /airsonic/playlists
         - name: airsonic-multimedia
           mountPath: /mnt/multimetia
       volumes:
