--- a/apps/stream/airsonic/config/airsonic.properties.delta.j2
+++ b/apps/stream/airsonic/config/airsonic.properties.delta.j2
@@ -7,4 +7,10 @@
 # These properties are injected over the ones that might exist in the airsonic.properties file that lives on the data volume.
 # Any other property set here will be ignored.
 
+LdapEnabled=true
+LdapUrl=ldaps://{{ airsonic_ldap_servername }}/{{ airsonic_ldap_users_dn }}
+LdapSearchFilter=(&(cn={0})(memberOf={{ airsonic_ldap_group }}))
+LdapManagerDn={{ airsonic_ldap_manager_dn }}
+LdapManagerPassword={{ airsonic_ldap_manager_password | hexlify }}
+LdapAutoShadowing=true
 
