--- a/apps/web/ttrss/config/config.php.j2
+++ b/apps/web/ttrss/config/config.php.j2
@@ -156,7 +156,7 @@
 	// if you experience weird errors and tt-rss failing to start, blank pages
 	// after login, or content encoding errors, disable it.
 
-	define('PLUGINS', 'auth_internal, note');
+	define('PLUGINS', 'auth_ldap, note');
 	// Comma-separated list of plugins to load automatically for all users.
 	// System plugins have to be specified here. Please enable at least one
 	// authentication plugin here (auth_*).
@@ -176,5 +176,27 @@
 	define('CONFIG_VERSION', 26);
 	// Expected config version. Please update this option in config.php
 	// if necessary (after migrating all new options from this file).
+
+	// Configurations for auth_ldap plugin
+	putenv('LDAPTLS_CACERT=/etc/ldap/ca.crt');
+	putenv('LDAPTLS_REQCERT=demand');
+
+	// Required parameters:
+	define('LDAP_AUTH_SERVER_URI', 'ldap://{{ ttrss_ldap_servername }}:389/');
+	define('LDAP_AUTH_USETLS', TRUE); // Enable StartTLS Support for ldap://
+	define('LDAP_AUTH_ALLOW_UNTRUSTED_CERT', FALSE); // Allows untrusted certificate
+	define('LDAP_AUTH_BASEDN', '{{ ttrss_ldap_users_dn }}');
+	define('LDAP_AUTH_ANONYMOUSBEFOREBIND', FALSE);
+	// ??? will be replaced with the entered username(escaped) at login
+	define('LDAP_AUTH_SEARCHFILTER', '(&(objectClass=inetOrgPerson)(cn=???)(memberOf={{ ttrss_ldap_group }}))');
+
+	// Optional configuration
+	define('LDAP_AUTH_BINDDN', '{{ ttrss_ldap_manager_dn }}');
+	define('LDAP_AUTH_BINDPW', '{{ ttrss_ldap_manager_password }}');
+	define('LDAP_AUTH_LOGIN_ATTRIB', 'cn');
+	define('LDAP_AUTH_LOG_ATTEMPTS', TRUE);
+
+	// Enable Debug Logging
+	define('LDAP_AUTH_DEBUG', TRUE);
 
 	// vim:ft=php
