--- a/apps/logging/elasticsearch/deploy/ingress.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     app: elasticsearch
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
