--- a/apps/logging/fluentd/deploy/deployment.yaml.j2
+++ b/apps/logging/fluentd/deploy/deployment.yaml.j2
@@ -32,7 +32,13 @@ spec:
           - name:  FLUENT_ELASTICSEARCH_PORT
             value: "9200"
           - name: FLUENT_ELASTICSEARCH_SCHEME
-            value: "http"
+            value: "https"
+          - name: FLUENT_ELASTICSEARCH_USER
+            value: "{{ logging_fluentd_elasticsearch_user }}"
+          - name: FLUENT_ELASTICSEARCH_PASSWORD
+            value: "{{ logging_fluentd_elasticsearch_password }}"
+          - name: SSL_CERT_FILE
+            value: "/etc/elasticsearch/ssl/ca.crt"
         resources:
           requests:
             cpu: "{{ fluentd_requests_cpu | default("100m") }}"
@@ -47,6 +53,9 @@ spec:
           mountPath: /fluentd/etc/
         - name: fluentd-includes
           mountPath: /fluentd/etc/conf.d
+        - name: certs-volume
+          mountPath: /etc/elasticsearch/ssl/ca.crt
+          subPath: ca.crt
       volumes:
       - name: tz-config
         hostPath:
@@ -57,5 +66,8 @@ spec:
       - name: fluentd-includes
         configMap:
           name: fluentd-includes
+      - name: certs-volume
+        secret:
+          secretName: elasticsearch-ca
       nodeSelector:
         capability/general-purpose: 'yes'
