Reconfigure Elasticsearch security when a configuration is changed

--- a/apps/logging/elasticsearch/config/elasticsearch.yml.j2
+++ b/apps/logging/elasticsearch/config/elasticsearch.yml.j2
@@ -18,7 +18,8 @@ opendistro_security.ssl.http.pemtrustedcas_filepath: certs/ca.crt
 opendistro_security.allow_unsafe_democertificates: true
 opendistro_security.allow_default_init_securityindex: true
 opendistro_security.authcz.admin_dn:
-  - CN=kirk,OU=client,O=client,L=test, C=de
+  # Use the node certificate as an admin user
+  - CN=elasticsearch
 
 opendistro_security.audit.type: internal_elasticsearch
 opendistro_security.enable_snapshot_restore_privilege: true
