--- a/apps/logging/elasticsearch/config/elasticsearch.yml.j2
+++ b/apps/logging/elasticsearch/config/elasticsearch.yml.j2
@@ -15,7 +15,7 @@ opendistro_security.ssl.http.enabled: true
 opendistro_security.ssl.http.pemcert_filepath: certs/es-node.crt
 opendistro_security.ssl.http.pemkey_filepath: certs/es-node.key
 opendistro_security.ssl.http.pemtrustedcas_filepath: certs/ca.crt
-opendistro_security.allow_unsafe_democertificates: true
+opendistro_security.allow_unsafe_democertificates: false
 opendistro_security.allow_default_init_securityindex: true
 opendistro_security.authcz.admin_dn:
   # Use the node certificate as an admin user
