Fix SSO Internal Error when the request has too many cookies

--- a/ansible/roles/nginx/templates/sites.j2
+++ b/ansible/roles/nginx/templates/sites.j2
@@ -52,6 +52,9 @@ server {
 
 		# Keep original request (LLNG server will received {{ item.lemonLdap.path | default("/lmauth") }})
 		fastcgi_param X_ORIGINAL_URI  $request_uri;
+
+		fastcgi_buffers 16 16k; 
+		fastcgi_buffer_size 32k;
 	}
 		{% endif %}
 			
@@ -168,6 +171,9 @@ server {
 
 		# Keep original request (LLNG server will received {{ item.lemonLdap.path | default("/lmauth") }})
 		fastcgi_param X_ORIGINAL_URI  $request_uri;
+		
+		fastcgi_buffers 16 16k; 
+		fastcgi_buffer_size 32k;
 	}
 	{% endif %}
 
