--- a/apps/home/homeassistant/prepare/secrets.yaml.j2
+++ b/apps/home/homeassistant/prepare/secrets.yaml.j2
@@ -8,3 +8,8 @@ recorder_mysql_url: mysql://{{ homeassistant_mysql_user }}:{{ homeassistant_mysq
 # MQTT credentials
 mqtt_username: {{ homeassistant_mqtt_user }}
 mqtt_password: {{ homeassistant_mqtt_password }}
+
+# SMTP credentials
+smtp_username: {{ homeassistant_smtp_user }}
+smtp_password: {{ homeassistant_smtp_password }}
+smtp_recipient_user: user@mail.net
