Don't expose the SMTP cert key, only expose the CA

--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -85,7 +85,7 @@ spec:
           secretName: openldap-ca
       - name: smtp-certs-volume
         secret:
-          secretName: zonemta-certificates
+          secretName: zonemta-ca
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
