--- a/apps/dev/gitlab/deploy/statefulSet.yaml.j2
+++ b/apps/dev/gitlab/deploy/statefulSet.yaml.j2
@@ -72,7 +72,7 @@ spec:
           secretName: openldap-ca
       - name: smtp-certs-volume
         secret:
-          secretName: zonemta-certificates
+          secretName: zonemta-ca
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
