Configure SMTP through ZoneMTA for Airsonic

--- a/apps/stream/airsonic/deploy/statefulSet.yaml.j2
+++ b/apps/stream/airsonic/deploy/statefulSet.yaml.j2
@@ -41,11 +41,18 @@ spec:
               -importcert -noprompt \
               -keystore /etc/ssl/certs/java_target/cacerts -storepass changeit \
               -alias openldap -file /etc/ldap/ca.crt
+            /usr/bin/keytool \
+              -importcert -noprompt \
+              -keystore /etc/ssl/certs/java_target/cacerts -storepass changeit \
+              -alias zonemta -file /etc/smtp/ca.crt
         volumeMounts:
         - name: keystore-volume
           mountPath: /etc/ssl/certs/java_target
-        - name: certs-volume
+        - name: ldap-certs-volume
           mountPath: /etc/ldap/ca.crt
+          subPath: ca.crt
+        - name: smtp-certs-volume
+          mountPath: /etc/smtp/ca.crt
           subPath: ca.crt
       containers:
       - image: airsonic/airsonic:10.2.1-RELEASE
@@ -95,9 +102,12 @@ spec:
       - name: airsonic-multimedia
         persistentVolumeClaim:
           claimName: nfs-multimetia
-      - name: certs-volume
+      - name: ldap-certs-volume
         secret:
           secretName: openldap-ca
+      - name: smtp-certs-volume
+        secret:
+          secretName: zonemta-ca
       - name: keystore-volume
         emptyDir: {}
       nodeSelector:
