--- a/apps/stream/airsonic/config/airsonic.properties.delta.j2
+++ b/apps/stream/airsonic/config/airsonic.properties.delta.j2
@@ -14,3 +14,9 @@ LdapManagerDn={{ airsonic_ldap_manager_dn }}
 LdapManagerPassword={{ airsonic_ldap_manager_password | hexlify }}
 LdapAutoShadowing=true
 
+SmtpServer={{ airsonic_smtp_host }}
+SmtpEncryption={{ airsonic_smtp_encryption }}
+SmtpPort={{ airsonic_smtp_port }}
+SmtpUser={{ airsonic_smtp_user }}
+SmtpFrom={{ airsonic_smtp_from }}
+SmtpPassword={{ airsonic_smtp_password | hexlify }}
