--- a/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
@@ -43,8 +43,11 @@ spec:
         - name: ttrss-config
           mountPath: /config/config.php
           subPath: config.php
-        - name: certs-volume
+        - name: ldap-certs-volume
           mountPath: /etc/ldap/ca.crt
+          subPath: ca.crt
+        - name: smtp-certs-volume
+          mountPath: /etc/smtp/ca.crt
           subPath: ca.crt
       volumes:
       - name: tz-config
@@ -53,8 +56,11 @@ spec:
       - name: ttrss-config
         configMap:
           name: ttrss-config
-      - name: certs-volume
+      - name: ldap-certs-volume
         secret:
           secretName: openldap-ca
+      - name: smtp-certs-volume
+        secret:
+          secretName: zonemta-ca
       nodeSelector:
         capability/general-purpose: 'yes'
